adding new concours

--- a/public/solic_pro/HTML/datatable.html
+++ b/public/solic_pro/HTML/datatable.html
@@ -6595,7 +6595,9 @@
 								<div class="contacts_card">
 									<div class="input-group p-3">
 										<input type="text" class="form-control" placeholder="Search ...">
-										<button class="btn btn-secondary btn-sm" type="button">Search</button>
+										<button clas
+										
+										s="btn btn-secondary btn-sm" type="button">Search</button>
 									</div>
 									<div class="contacts mb-0">
 										<ul class="list-group list-group-flush">
